[tool.poetry]
name = "sqlalchemylab"
version = "0.1.0"
description = ""
authors = ["Victor Martinez <victor.martinez@lend.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.4"
sqlalchemy = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
